# Face-Detection

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.backup  README.md  docker-compose.yaml  dockerfile  jenkinsfile
app/: Dockerfile  README.md  build_and_push_image.sh  docker-compose.yaml  dockerfile.dev  main.py  pyproject.toml  requirements.txt
app/deployments/face-detection/: Chart.yaml  values.yaml
app/deployments/face-detection/templates/: deployment.yaml  ingress.yaml  service.yaml
app/deployments/jaeger/: values.yaml
app/deployments/jaeger/templates/: service.yaml
app/src/: main.py
custom_images/jenkins/: docker-compose.yaml
deployments/face-detection/: values.yaml
deployments/face-detection/templates/: deployment.yaml  ingress.yaml  service.yaml
infrastructure/: .gitignore  README.md  terraform.tfstate
infrastructure/ansible/: deploy_jenkins.yaml
infrastructure/ansible/inventory/: inventory.ini
infrastructure/custom_images/jenkins/: build.sh
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
notebook/: YOLO11_training.ipynb
observable_systems/K8s/elk-filebeat/elasticsearch/: values.yaml
observable_systems/K8s/elk-filebeat/filebeat/: values.yaml
observable_systems/K8s/jaeger/templates/: deployment.yaml  service.yaml
observable_systems/K8s/kube-prometheus-stack/: values.yaml
observable_systems/k8s/elk/logstash/: values.yaml
observable_systems/k8s/jaeger/: values.yaml
src/: main.py  my_yolo.py
