[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["DucLong06 <hoangduclongg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.21"
fastapi = "^0.115.3"
loguru = "^0.7.2"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
